Upcoming:
- Information Screen from RFTools Power has been moved to RFTools Base

0.0.10:
- Fixed a serious networking problem which could cause 'invalid discriminator spam' on servers

0.0.9:
- Fixed a networking problem on servers

0.0.8:
- API changes for the storage scanner
- Update to latest McJtyLib

0.0.7:
- The Machine infuser actually works
- Reintroduced infused diamond and enderpearls as crafting ingredients

0.0.3:
- Update to latest Forge

0.0.2:
- Update to 1.14.4